--- a/web/manifest.json
+++ b/web/manifest.json
@@ -15,21 +15,14 @@
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
+            "src": "icons/Icon-96.png",
+            "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
+            "src": "icons/Icon-192.png",
+            "sizes": "36x36",
+            "type": "image/png"
         }
     ]
 }
