--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.1.2+3
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -36,8 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.7
   firebase_core: ^1.12.0
-  fluttertoast: ^8.0.8
+  fluttertoast: ^8.0.9
   provider: ^6.0.2
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
